--- a/generated_patches_for_BSDS500_dataset/Readme
+++ b/generated_patches_for_BSDS500_dataset/Readme
@@ -1,1 +1,3 @@
-
+The Patches.zip contains 2 folders
+1) patches_for_training_set(only_included_for_10_images) : This includes patches generated for 10 images from the training set
+2)patches_test_set(only_included_for_10_images) : This includes patches generated for 10 images from the test set
