--- a/DataLoaders/SET12/Set12_dataloader.ipynb
+++ b/DataLoaders/SET12/Set12_dataloader.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ruled-raleigh",
+   "id": "comfortable-bidding",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "swedish-declaration",
+   "id": "acute-suite",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "variable-chaos",
+   "id": "discrete-drilling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "smooth-subscriber",
+   "id": "joined-blowing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "graduate-complex",
+   "id": "intelligent-bulletin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,31 +82,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "behavioral-shakespeare",
+   "execution_count": 13,
+   "id": "explicit-register",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'tuple' object has no attribute 'head'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-12-bd843ef1dcaf>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mX_train_list\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtrain_test_split_for_image_SET12\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mX_train_list\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'head'"
-     ]
+     "data": {
+      "text/plain": [
+       "['03.png',\n",
+       " '04.png',\n",
+       " '05.png',\n",
+       " '06.png',\n",
+       " '07.png',\n",
+       " '08.png',\n",
+       " '09.png',\n",
+       " '10.png',\n",
+       " '11.png',\n",
+       " '12.png']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "X_train_list=train_test_split_for_image_SET12()\n",
-    "X_train_list.head()"
+    "X_train_list[0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "small-yahoo",
+   "id": "disciplinary-exchange",
    "metadata": {},
    "outputs": [],
    "source": []
