--- a/DataLoaders/SET12/Set12_dataloader.ipynb
+++ b/DataLoaders/SET12/Set12_dataloader.ipynb
@@ -52,14 +52,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This function returns the images from Urban 100 image_SRF_4 folder\n",
+    "# This function returns the images from SET12 folder\n",
     "def train_test_split_for_image_SET12():\n",
     "    #defining the size of train test split\n",
     "    size_of_test_split=np.floor(len(content_folder)*test_split)\n",
     "    size_of_train_split=len(content_folder)-size_of_test_split\n",
     "    i=0\n",
     "    test_indexes=[]\n",
-    "    #splitting the file names as per the random tratin test split \n",
+    "    #splitting the file names as per the random train test split \n",
     "    while i<int(size_of_test_split):\n",
     "\n",
     "        generated_num=random.randint(0,size_of_test_split)\n",
