--- a/Pipelines/BSDS500_FFDNet/Recreate_Image_from_patches.ipynb
+++ b/Pipelines/BSDS500_FFDNet/Recreate_Image_from_patches.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#dev-nayan\n",
     "#import statements\n",
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
