Update The FFDnet architecture.ipynb

--- a/Models/Benchmarks/FFDNet/The FFDnet architecture.ipynb
+++ b/Models/Benchmarks/FFDNet/The FFDnet architecture.ipynb
@@ -5,6 +5,7 @@
    "id": "75e5355b",
    "metadata": {},
    "source": [
+    "#dev-nayan\n",
     "This code file contains the architecture design for FFDnet as specified in the paper for both color and grayscale images\n",
     "The training is yet to be done\n",
     "current Patch size closen is 40 x 40 \n",
